@@ -74,13 +74,13 @@ public class JmsConnectorTestCase extends AbstractConnectorTestCase
         message.expectAndReturn("getText", "Test JMS Message");
         message.expectAndReturn("getJMSCorrelationID", null);
         message.expectAndReturn("getJMSMessageID", "1234567890");
-        message.expectAndReturn("getJMSDeliveryMode", new Integer(1));
+        message.expectAndReturn("getJMSDeliveryMode", Integer.valueOf(1));
         message.expectAndReturn("getJMSDestination", null);
-        message.expectAndReturn("getJMSPriority", new Integer(4));
-        message.expectAndReturn("getJMSRedelivered", new Boolean(false));
+        message.expectAndReturn("getJMSPriority", Integer.valueOf(4));
+        message.expectAndReturn("getJMSRedelivered", Boolean.valueOf(false));
         message.expectAndReturn("getJMSReplyTo", null);
-        message.expectAndReturn("getJMSExpiration", new Long(0));
-        message.expectAndReturn("getJMSTimestamp", new Long(0));
+        message.expectAndReturn("getJMSExpiration", Long.valueOf(0));
+        message.expectAndReturn("getJMSTimestamp", Long.valueOf(0));
         message.expectAndReturn("getJMSType", null);
         message.expectAndReturn("getPropertyNames", new Enumeration() {
             public boolean hasMoreElements()
